--- a/src/components/HomeCardComunicados/style.css
+++ b/src/components/HomeCardComunicados/style.css
@@ -11,7 +11,7 @@
     background-color: transparent;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     text-align: center;
 }
 
@@ -24,4 +24,9 @@
 
 .card-comunicados-container .card-text span{
     font-weight: bold;
+}
+
+.comunicados-img{
+    width: 100%;
+    height: 75%;
 }
