--- a/src/components/HomeButton/style.css
+++ b/src/components/HomeButton/style.css
@@ -3,8 +3,7 @@
 
 /* Estilo do cartão/botão */
 .button-container {
-    width: 200px;
-    padding: 20px;
+    padding: 1rem;
     border: 2px solid var(--foreground-color);
     border-radius: 15px;
     background-color: transparent;
@@ -12,6 +11,11 @@
     flex-direction: column;
     justify-content: flex-start;
     text-align: center;
+    transition: transform 0.3s ease;
+}
+
+.button-container:hover {
+    transform: scale(1.05); /* Adiciona um leve efeito de zoom */
 }
 
 /* Ícone de fundo */
@@ -22,17 +26,16 @@
     height: 60px;
     background-color: var(--foreground-color);
     border-radius: 15px;
-    margin-bottom: 10px;
-    margin-left: 20px;
+    margin-bottom: 0.5rem;
     z-index: 1;
 }
 
 /* Camada sobreposta para dar efeito de profundidade */
 .icon-overlay {
     position: absolute;
-    left: 20px;  /* Distância ajustada para melhor visibilidade */
-    width: 100%;  /* Ajustado para cobrir a área do contêiner */
-    height: 100%; /* Ajustado para cobrir a área do contêiner */
+    left: 10px; /* Ajustado para melhor visibilidade */
+    width: 100%;
+    height: 100%;
     background-color: var(--web-orange-100);
     border-radius: 15px;
     z-index: 0; /* Mantém overlay atrás do ícone */
@@ -41,25 +44,73 @@
 /* Ícone interno */
 .icon {
     position: absolute;
-    font-size: 40px;
+    font-size: 1.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
     background-color: var(--foreground-color);
-    padding: 0 1vh;
+    padding: 0.5rem;
     border-radius: 15px;
     border: 3px solid white;
 }
 
-.icon-content{
+.icon-content {
     color: var(--web-orange-100);
 }
 
 /* Texto */
 .button-text {
     color: var(--foreground-color);
-    font-size: 18px;
+    font-size: 1rem;
     font-weight: bold;
-    margin-top: 5px;
+    margin-top: 0.5rem;
+}
+
+/* Responsividade */
+@media (max-width: 1040px) {
+    .button-container {
+        padding: 1rem 2rem;
+    }
+
+    .icon-container {
+        width: 50px;
+        height: 50px;
+    }
+
+    .icon {
+        font-size: 1.2rem;
+    }
+
+    .button-text {
+        font-size: 0.9rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .button-container {
+        padding: 1rem 2rem;
+    }
+
+    .icon {
+        font-size: 1rem;
+    }
+
+    .button-text {
+        font-size: 0.8rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .button-container {
+        padding: 1rem 2rem;
+    }
+
+    .icon {
+        font-size: 0.8rem;
+    }
+
+    .button-text {
+        font-size: 0.7rem;
+    }
 }
