--- a/src/components/HomeCardComunicados/style.css
+++ b/src/components/HomeCardComunicados/style.css
@@ -3,9 +3,7 @@
 
 /* Estilo do cartão/botão */
 .card-comunicados-container {
-    width: 300px;
-    height: 190px;
-    padding: 20px 0px;
+    padding: 1rem 0;
     border: 2px solid var(--medium-blue);
     border-radius: 15px;
     background-color: transparent;
@@ -29,4 +27,10 @@
 .comunicados-img{
     width: 100%;
     height: 75%;
+}
+
+@media (max-width: 1200px) {
+    .card-comunicados-container{
+        width: 300px;
+    }
 }
