--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -31,7 +31,7 @@
     height: 100%;
     position: absolute;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%) translateY(2vh);
 }
 
 .nav-menu .logo{
