--- a/src/variables.css
+++ b/src/variables.css
@@ -6,6 +6,7 @@
     --foreground-color: #fb8501;
     --web-orange-500: #FEA519;
     --web-orange-100: #FFF8E6;
+    --medium-blue-hover: #219dbcbf;
     --medium-blue: #219ebc;
     --light-blue: #8ecae6;
     --background-main-color: #f6f6f8;
