--- a/src/pages/UpKeepPage/style.css
+++ b/src/pages/UpKeepPage/style.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   justify-content: space-around;
   background-color: var(--background-foreground-color);
+  height: 90vh;
 }
 
 .upkeep-page h1 {
