Feat: Notification Menu

--- a/src/pages/HomePage/style.css
+++ b/src/pages/HomePage/style.css
@@ -93,7 +93,7 @@
 
 @media (max-width: 1200px) {
     .home-page{
-        flex-direction: column-reverse;
+        flex-direction: column;
     }
 
     .aside {
