--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,5 +1,4 @@
 @import url(../../variables.css);
-@import url(../../font-styles.css);
 
 .nav-menu {
   background-image: var(--background-gradient-bb);
@@ -50,4 +49,71 @@
   .nav-menu .options {
     display: none;
   }
+}
+
+/* Estilos gerais */
+.notification-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.notification-menu {
+  position: fixed;
+  top: 10vh;
+  right: -480px; /* Inicialmente fora da tela */
+  width: 80%;
+  max-width: 480px;
+  height: 90%;
+  background-color: #ffffff;
+  box-shadow: -2px 0 10px rgba(0, 0, 0, 0.1);
+  transition: right 0.3s ease-in-out;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.notification-menu.open {
+  right: 0;
+}
+
+.notification-menu h2 {
+  margin: 0;
+  font-size: 1.5rem;
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 0.5rem;
+}
+
+.notification-menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.notification-menu ul li {
+  padding: 0.5rem 0;
+  border-bottom: 1px solid #f1f1f1;
+  font-size: 1rem;
+  color: #333;
+}
+
+.close-menu {
+  background: none;
+  border: none;
+  font-size: 2rem;
+  color: #333;
+  align-self: flex-end;
+  cursor: pointer;
+}
+
+/* Overlay escurecido */
+.menu-overlay {
+  position: fixed;
+  top: 10vh;
+  left: 0;
+  width: 90%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
 }
