--- a/src/components/OrderCard/style.css
+++ b/src/components/OrderCard/style.css
@@ -7,18 +7,27 @@
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     max-width: 400px;
-    width: 75%;
-    padding: 15px;
+    width: 90%;
+    padding: 1rem;
     text-align: left;
     display: flex;
     flex-direction: column;
 }
 
 .order-card .img-card {
-    width: 22.5rem;
-    height: 10rem;
+    width: 20rem;
+    height: 7.5rem;
     border-radius: 15px;
     margin-bottom: 10px;
+    overflow: hidden;
+    position: relative;
+}
+
+.order-card .img-card img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 
 .order-details p {
