--- a/src/pages/MediationPage/style.css
+++ b/src/pages/MediationPage/style.css
@@ -232,3 +232,10 @@
       transform: translateY(0);
   }
 }
+.mediation-forms input[type="date"]:focus,
+.mediation-forms input[type="text"]:focus,
+.mediation-forms textarea:focus,
+.mediation-forms select:focus {
+  border: 1px solid var(--web-orange-500); /* Altere para a cor laranja desejada */
+  outline: none; /* Remove o contorno padrão do foco */
+}
