--- a/src/components/AssemblyForms/style.css
+++ b/src/components/AssemblyForms/style.css
@@ -1,7 +1,7 @@
 @import url(../../variables.css);
 
 .assembly-forms {
-    margin: 20px auto;
+    margin: 2rem auto;
     padding: 1.5rem;
     border-radius: 8px;
     display: grid;
