--- a/src/components/AssemblyInit/style.css
+++ b/src/components/AssemblyInit/style.css
@@ -1,5 +1,10 @@
 @import url(../../variables.css);
 
+.assembly-init{
+    padding: 1rem;
+    text-align: center;
+}
+
 .assembly-init h1 {
     font-size: 1.8rem;
     margin-bottom: 1rem;
