--- a/src/components/HomeCardPerfil/style.css
+++ b/src/components/HomeCardPerfil/style.css
@@ -3,7 +3,7 @@
 
 /* Estilo do cartão/botão */
 .card-profile {
-    padding: 20px 25px;
+    padding: 1rem;
     border: 2px solid var(--medium-blue);
     border-radius: 15px;
     background-color: transparent;
@@ -13,16 +13,29 @@
     text-align: center;
 }
 
+.card-profile .title{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1rem;
+}
+
 .card-profile p{
     text-align: start;
 }
 
 .card-profile .span{
+    font-size: 1.25rem;
     font-weight: 800;
 }
 
 .card-profile img{
     height: 5vh;
     width: 5vh;
-    margin: 1vh 40%;
+}
+
+@media (max-width:1200px) {
+    .card-profile .span{
+        font-size: 1.5rem;
+    }
 }
