--- a/src/components/NotificationUnit/style.css
+++ b/src/components/NotificationUnit/style.css
@@ -2,7 +2,7 @@
 
 .notification-unit{
     background-color: var(--background-foreground-color);
-    padding: 0.5rem 0;
+    padding: 0.5rem;
     margin: 0.5rem;
     border-radius: 15px;
     display: flex;
