--- a/src/pages/AssemblyPage/style.css
+++ b/src/pages/AssemblyPage/style.css
@@ -5,15 +5,13 @@
     flex-direction: column;
     justify-content: start;
     align-items: center;
-    height: 90vh;
+    min-height: 90vh;
     background-color: var(--background-foreground-color);
     gap: 2.5rem;
-    padding-top: 2.5rem;
+    padding: 2.5rem 0;
 }
 
 .assembly-content {
-    text-align: center;
-    padding: 2rem;
     background-color: white;
     border-radius: 12px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
