--- a/src/pages/MediationPage/style.css
+++ b/src/pages/MediationPage/style.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 90vh;
+  min-height: 90vh;
   background-color: var(--background-foreground-color);
 }
 
@@ -52,11 +52,12 @@
 .mediation-forms input[type="text"],
 .mediation-forms textarea,
 .mediation-forms select {
-  padding: 0.25rem;
+  padding: 0.5rem;
+  border: 0.5px solid #d0cfcf;
   border-radius: 4px;
   font-size: 1rem;
-  width: 100%; /* Ocupa todo o espaço da coluna */
   background-color: var(--background-foreground-color);
+  width: 100%;
 }
 
 /* Botões */
