--- a/src/pages/ReservationsPage/style.css
+++ b/src/pages/ReservationsPage/style.css
@@ -5,9 +5,9 @@
   flex-direction: column;
   align-items: center; /* Centraliza o conteúdo horizontalmente */
   justify-content: center; /* Centraliza o conteúdo verticalmente */
-  padding: 2rem 1rem;
+  padding: 1rem;
   background-color: var(--background-foreground-color);
-  height: 90vh; /* Garante o preenchimento da tela */
+  min-height: 90vh; /* Garante o preenchimento da tela */
 }
 
 .reservations-page h1 {
@@ -51,7 +51,6 @@
   border-radius: 4px;
   font-size: 1rem;
   width: 100%; /* Ocupa todo o espaço da coluna */
-  border: 1px solid var(--main-color);
   background-color: var(--background-foreground-color);
 }
 
