--- a/src/pages/FinancialPage/style.css
+++ b/src/pages/FinancialPage/style.css
@@ -73,6 +73,9 @@
     padding: 1rem;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+
+    
 }
 
 .despesas h3 {
@@ -180,29 +183,21 @@
         font-size: 12px; /* Reduz tamanho do texto na tabela */
     }
 }
-
-/* Botões do menu */
-.sidebar .menu button {
-    display: flex;
-    align-items: center;
-    justify-content: center; /* Centraliza os ícones e o texto */
-    gap: 10px;
-    font-size: 16px;
-    font-weight: bold; /* Deixa o texto mais destacado */
-    padding: 1rem 2.5rem; /* Espaçamento interno maior */
-    width: 100%; /* Botões ocupam toda a largura da coluna */
-    text-align: center;
+.pix-button {
+    margin-top: 1rem;
+    padding: 0.75rem 1.5rem;
+    font-size: 1rem;
+    font-weight: bold;
+    color: #ffffff;
     background-color: var(--foreground-color);
-    color: var(--background-main-color);
     border: none;
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
-    gap: 10px;
-    margin-bottom: 1rem;
-}
-
-.sidebar .menu button:hover {
-    background-color: var(--web-orange-500);
-    transform: scale(1.05); /* Efeito de leve aumento ao passar o mouse */
-}
+  }
+  
+  .pix-button:hover {
+    background-color: var(--medium-blue-hover);
+    transform: scale(1.05);
+  }
+  
