--- a/src/pages/FaqPage/style.css
+++ b/src/pages/FaqPage/style.css
@@ -4,14 +4,27 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    align-items: center;
     width: 100%;
     min-height: 90vh;
     padding: 5rem 0;
+    background-color: var(--light-blue);
+}
+
+.faq-page .container{
+    background-color: var(--background-main-color);
+    width: 95%;
+    max-width: 1200px;
+    border-radius: 2rem;
 }
 
 .faq-search{
     display: flex;
     justify-content: center;
+}
+
+.faq-page .title{
+    text-align: center;
 }
 
 .faq-search .search{
@@ -44,7 +57,6 @@
 
 .faq-page .dropdown-container {
     width: 90%;
-    max-width: 1200px;
     margin: 20px auto;
     padding: 10px;
     display: grid;
