--- a/src/pages/ProfilePage/style.css
+++ b/src/pages/ProfilePage/style.css
@@ -54,10 +54,10 @@
     gap: 1rem;
 }
 
-.buttons button, .buttons input[type="button"] {
-    padding: 0.5rem 1rem;
+.profile-forms .buttons button, .buttons input[type="button"] {
+    padding: 0.75rem 1.5rem;
     border: none;
-    border-radius: 4px;
+    border-radius: 8px;
     font-weight: bold;
     cursor: pointer;
 }
