--- a/src/pages/LoginPage/style.css
+++ b/src/pages/LoginPage/style.css
@@ -68,7 +68,8 @@
 .additional-options,
 .additional-options div{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
 }
 
 .additional-options label{
