--- a/src/pages/HomePage/style.css
+++ b/src/pages/HomePage/style.css
@@ -71,6 +71,8 @@
 }
 
 .comunicados-content {
+    max-height: 300px;
+    height: 25vh;
     background-color: white;
     border-radius: 15px;
     display: grid;
